# discord_brackets

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  reimplementation.py
old/: main.py
old/bot/: __init__.py  cog.py  views.py
old/bracket/: __init__.py  image.py  logic.py
old/database/: db.py  models.py
old/tests/: __init__.py  conftest.py  test_bracket_logic.py  test_database.py  test_integration.py
scripts/: debug_height.py  preview_bracket.py  test_png.py  test_svg.py
src/discord_brackets/: db.py  main.py  models.py  types.py  utils.py  views.py  visualization.py
src/discord_brackets/visualization/: __init__.py  layout.py  render.py
tests/: conftest.py  test_db.py  test_layout.py
