[project]
name = "discord-brackets"
version = "0.1.0"
description = "Discord bot for running playoff-style bracket tournaments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "py-cord>=2.7.0",
    "asyncpg>=0.30.0",
    "pillow>=12.1.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "aiosqlite>=0.22.1",
]

[project.scripts]
discord-brackets = "discord_brackets.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.400",
    "types-pillow>=10.2.0.20240822",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["discord_brackets"]
